[package]
name = "mavericks_redesign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
enum-iterator = "1.4.1"
getrandom = { version = "0.2.10", features = ["js"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
log = "0.4.17"
rand = {version = "0.8.5", disabled-features=["getrandom"]}
rgb = "0.8.36"
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["MouseEvent", "EventTarget","HtmlCanvasElement", "CanvasRenderingContext2d"] }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 3 # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

